Test/errors/err_generic_builtin_param.cb
expect_error("Generic type parameter must be an identifier, not a built-in type") {
    struct Box<int> { int value = 0; }
}

extern int main()
{
    return 0;
}
